# abstract-rs

./: .env  .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  RustConfig  motd.txt
.sass-cache/3481ee1652686db813e0e4d3d93901853ab2bf99/: base.scssc  body.scssc  carousel.scssc  contentbox.scssc  form.scssc  home.scssc  navbar.scssc
assets/: home.html  signup.html
assets/javascript/: confirm.js
assets/styles/: homepage.css
assets/templates/: demo_template.tpl
migrations/20170325050135_users/: up.sql
migrations/20170413022705_sessions/: up.sql
misc/ideas/: ratingsystem.txt
src/: main.rs
src/auth/: mod.rs  signin.rs  user.rs
src/data/: mod.rs  models.rs
src/database/: connection.rs  mod.rs  models.rs  schema.rs
src/database/models/: mod.rs  session_models.rs  user_models.rs
src/errors/: error_codes.rs  mod.rs
src/home/: home_routes.rs  mod.rs
src/misc/: mod.rs
src/routes/: mod.rs  nav.rs
src/server/: mod.rs  serv.rs
src/server/auth/: login.rs
src/site_routes/: routes.rs
templates/: about.hbs  footer.hbs  head.hbs  header.hbs  home.hbs  navigation.hbs  register.hbs
templates/docs/: about.hbs  omnibus.hbs
templates/error/: 404.hbs  422.hbs
templates/group/: group.hbs
templates/main/: home.hbs
templates/styles/: style.css  style.scss  styleold.css
templates/styles/js/: carousel.js  verify_password.js
templates/styles/stylesheets/: base.scss  body.scss  carousel.scss  contentbox.scss  form.scss  home.scss  navbar.scss  style.css  style.css.map  stylenew.css.map
templates/user/: register.hbs  signin.hbs
(+6 files in other folders)
