[package]
name = "tothemoon"
version = "0.1.0"
authors = ["landon.mote <landon.mote@gmail.com>"]

[dependencies]
rocket = "0.2.3"
rocket_codegen = "0.2.3"
serde = "*"
serde_json = "*"
serde_derive = "*"
diesel = {version = "0.12.0", features = ["mysql"]}
diesel_codegen = {version = "0.12.0", features = ["mysql"]}
dotenv = "0.8.0"
r2d2 = "0.7.1"
r2d2-diesel = "0.12.0"

[dependencies.rocket_contrib]
version = "0.2.3"
default-features = false
features = ["handlebars_templates"]