[package]
name = "abstract-rs"
version = "0.1.0"
authors = ["landon.mote <landon.mote@gmail.com>"]

[dependencies]
rocket = "0.2.4"
rocket_codegen = "0.2.4"
serde = "*"
serde_json = "*"
serde_derive = "*"
diesel = {version = "0.12.0", features = ["mysql"]}
diesel_codegen = {version = "0.12.0", features = ["mysql"]}
dotenv = "0.8.0"
rand = "0.3.15"

[dependencies.rocket_contrib]
version = "0.2.4"
default-features = false
features = ["handlebars_templates"]