[package]
name = "abstract-rs"
version = "0.1.0"
authors = ["landon.mote <landon.mote@gmail.com>"]

[dependencies]
rocket = "0.2.5"
rocket_codegen = "0.2.5"
serde = "*"
serde_json = "*"
serde_derive = "*"
diesel = {version = "0.12.0", features = ["mysql"]}
diesel_codegen = {version = "0.12.0", features = ["mysql"]}
dotenv = "0.8.0"
rand = "0.3.15"
base64 = "0.4.1"
bcrypt = "0.1.3"

[dependencies.rocket_contrib]
version = "0.2.5"
default-features = false
features = ["handlebars_templates"]